# plat-price

./: .gitignore  README.md  essential_df.csv  essential_df_2023-06-29.csv  extra_df.csv  extra_df_2023-06-29.csv  pyproject.toml  scrape_plat_prices.py
.github/workflows/: main.yml
